# autism-analysis

./: .gitignore  CHATBOT_GEMINI_SETUP.md  ENHANCED_FACIAL_ANALYSIS.md  INSTALLATION.md  LICENSE  QUICK_REFERENCE.md  README.md
backend/: .env.example  ai_chatbot.py  app.py  config.py  ensemble_inference.py  pyproject.toml  requirements.txt  setup_ai.ps1  test_chat.py  test_enhanced_analysis.py  test_improved_detection.py  test_no_eyes.py  test_no_eyes_mock.py  test_no_face.py  utils.py
backend/fastapi_experimental/: README.md  database.py  dependencies.py  main.py  models.py  schemas.py
backend/fastapi_experimental/routers/: analysis.py  assessments.py  auth.py  chat.py  children.py
docs/: CHANGES_DOC.md  SETUP_DOC.md  local_model_inference_requirement_document.md  plan.md
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Chatbot.css  Chatbot.js  Footer.css  Footer.js  ImageUpload.js  Navbar.css  Navbar.js  ResultsDisplay.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: AnalysisPage.css  AnalysisPage.js  ChatPage.js  ChildProfilePage.js  DashboardPage.js  HomePage.css  HomePage.js  LoginPage.js  RegisterPage.js
ml_model/: autism_detector.py  best_model.pkl  train_model.py
scripts/: README.md  verify_fastapi.py
tests/: README.md  debug_load.py  debug_tf.py  reproduce_issue.py  test_closed_eyes.py  test_prediction.py  verify_fix.py
